--- a/conf/php-fpm.ini.erb
+++ b/conf/php-fpm.ini.erb
@@ -34,7 +34,7 @@
 ; http://php.net/ini.sections
 
 ; Directives are specified using the following syntax:
-; directive = value
+; directive = val=
 ; Directive names are *case sensitive* - foo=bar is different from FOO=bar.
 ; Directives are variables used to configure PHP or PHP extensions.
 ; There is no name validation.  If PHP can't find an expected
@@ -858,6 +858,11 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
+extension=apcu.so
+apc.enabled=1
+apc.shm_size=32M
+apc.ttl=7200
+apc.enable_cli=1
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
